--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                     <div>
                         대략 <span class='time_result'></span>일 이상 훈련하셔야 합니다! :)
                     </div>
+                    <div>
+                        대략 <span class='year_result'></span>년 <span class='month_result'></span>개월 이상 훈련하셔야 합니다! :)
+                    </div>
                 </div>
                 
                 <div class='result_buttons'>
