--- a/index.html
+++ b/index.html
@@ -91,6 +91,19 @@
             
         </section>
         
+		<selection id='model'>
+			<div class = 'model_wrap'>
+				<div class = 'cheer'>
+					<h1>화이팅!!</h1>
+					<h3>당신의 꿈을 응원합니다!</h3>
+				</div>
+				<div class='licat_img'>
+					<img, src = 'img/licat.png'>
+						</img,>
+				</div>
+			</div>
+		</selection>
+		
         <section id='coopyright'>
             <p>본 서비스 저작권은 yebin youn 에게 있습니다
             </p>
